--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>My Anime Search Engine</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1>My Anime Search Engine</h1>
+        </header>
 
-    <main>
-        <div class="search-container">
-            <script async src="https://cse.google.com/cse.js?cx=232a9e06c1908468e"></script>
-            <div class="gcse-search"></div>
-        </div>
-    </main>
+        <main>
+            <div class="search-container">
+                <script async src="https://cse.google.com/cse.js?cx=232a9e06c1908468e"></script>
+                <div class="gcse-search"></div>
+            </div>
+        </main>
 
-    <footer>
-        <p>© 2023 My Anime Search Engine</p>
-    </footer>
+        <footer>
+            <p>© 2024 My Anime Search Engine</p>
+        </footer>
+    </div>
 </body>
 </html>
