--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Anime Search Engine</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -14,13 +15,13 @@
 
         <main>
             <div class="search-container">
-                <script async src="https://cse.google.com/cse.js?cx=232a9e06c1908468e"></script>
+                <script async src="https://cse.google.com/cse.js?cx=YOUR_CSE_ID"></script>
                 <div class="gcse-search"></div>
             </div>
         </main>
 
         <footer>
-            <p>© 2024 My Anime Search Engine</p>
+            <p>© 2023 My Anime Search Engine</p>
         </footer>
     </div>
 </body>
