--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
         <main>
             <div class="search-container">
-                <script async src="https://cse.google.com/cse.js?cx=YOUR_CSE_ID"></script>
-                <div class="gcse-search"></div>
+                <script async src="https://cse.google.com/cse.js?cx=232a9e06c1908468e"></script>
+                <div class="gcse-search"></div> <div class="gcse-search"></div> 
             </div>
         </main>
 
