--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <main>
             <div class="search-container">
                 <script async src="https://cse.google.com/cse.js?cx=232a9e06c1908468e"></script>
-                <div class="gcse-search"></div> <div class="gcse-search"></div> 
-            </div>
+                <div class="gcse-search"></div>  </div>
         </main>
 
         <footer>
